syntax = "proto3";

package indicator;

// IndicatorService provides metadata about technical indicators
service IndicatorService {
  // Get metadata for a single indicator
  rpc GetIndicatorMetadata(GetIndicatorMetadataRequest) returns (IndicatorMetadataResponse);

  // Get metadata for multiple indicators (batch)
  rpc BatchGetIndicatorMetadata(BatchGetIndicatorMetadataRequest) returns (BatchGetIndicatorMetadataResponse);

  // Calculate a single indicator
  rpc CalculateIndicator(CalculateIndicatorRequest) returns (CalculateIndicatorResponse);

  // Calculate multiple indicators (batch)
  rpc BatchCalculateIndicators(BatchCalculateIndicatorsRequest) returns (BatchCalculateIndicatorsResponse);

  // Health check endpoint
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Request to get metadata for a single indicator
message GetIndicatorMetadataRequest {
  // Indicator name (e.g., "sma", "rsi")
  string name = 1;
  // Optional: User ID for auth/logging
  string user_id = 2;
}

// Request to get metadata for multiple indicators
message BatchGetIndicatorMetadataRequest {
  // List of indicator names
  repeated string names = 1;
  // Optional: User ID for auth/logging
  string user_id = 2;
}

// Response containing metadata for multiple indicators
message BatchGetIndicatorMetadataResponse {
  // Successfully found indicators
  repeated IndicatorMetadataResponse indicators = 1;
  // Indicator names not found
  repeated string not_found = 2;
}

// Parameter definition for an indicator
message Parameter {
  // Human-readable name.
  string name = 1;
  // "int", "float", "str", "bool"
  string type = 2;
  // Description text.
  string description = 3;
  // Required value.
  bool required = 4;
  // String representation of default value
  string default_value = 5;

  // Parameter constraints
  ParameterConstraints constraints = 6;

  // Enum values (for type="str" with limited choices)
  repeated string enum_values = 7;
}

// Parameter constraints
message ParameterConstraints {
  // Minimum value (numeric types)
  optional double min = 1;
  // Maximum value (numeric types)
  optional double max = 2;
  // Minimum length (string types)
  optional int32 min_length = 3;
  // Maximum length (string types)
  optional int32 max_length = 4;
  // Regex pattern (string types)
  optional string pattern = 5;
}

// Output column definition
message OutputColumn {
  // Human-readable name.
  string name = 1;
  // "float", "int", "bool"
  string type = 2;
  // Description text.
  string description = 3;
}

// Dependency on another indicator
message Dependency {
  // Indicator name value.
  string indicator_name = 1;
  // Reason value.
  string reason = 2;
  // Is optional flag.
  bool is_optional = 3;
}

// Complete metadata for an indicator
message IndicatorMetadataResponse {
  // Human-readable name.
  string name = 1;
  // Display name value.
  string display_name = 2;
  // Description text.
  string description = 3;
  // "trend", "momentum", "volatility", "volume"
  string category = 4;
  // Associated tags.
  repeated string tags = 5;

  // Parameters
  repeated Parameter parameters = 6;

  // Outputs
  repeated OutputColumn outputs = 7;

  // Dependencies
  repeated Dependency dependencies = 8;

  // Calculation requirements
  int32 min_lookback = 9;
  // Whether indicator overlays on price chart
  bool is_overlay = 10;

  // Metadata
  string version = 11;
  // Created at timestamp.
  string created_at = 12;
  // Updated at timestamp.
  string updated_at = 13;
}

// ============================================================================
// Calculation Messages
// ============================================================================

// Request to calculate a single indicator
message CalculateIndicatorRequest {
  // Indicator name (e.g., "SMA", "RSI")
  string indicator_name = 1;
  // Parameters as key-value pairs (all values as strings)
  map<string, string> params = 2;
  // Symbol (e.g., "AAPL", "BTCUSDT")
  string symbol = 3;
  // Time interval (e.g., "1d", "1h", "5m")
  string interval = 4;
  // Start date (ISO 8601 format)
  string start_date = 5;
  // End date (ISO 8601 format)
  string end_date = 6;
  // Optional: User ID for auth/logging
  string user_id = 7;
}

// Response for single indicator calculation
message CalculateIndicatorResponse {
  // Indicator name value.
  string indicator_name = 1;
  // Params value.
  map<string, string> params = 2;
  // "series", "multi_series", "signal"
  string result_type = 3;

  // Single output (for result_type = "series")
  repeated double values = 4;

  // Multi output (for result_type = "multi_series", e.g., BBANDS)
  map<string, DoubleArray> multi_values = 5;

  // Signal output (for result_type = "signal")
  repeated string signals = 6;

  // ISO 8601 timestamps
  repeated string timestamps = 7;
  // Symbol identifier.
  string symbol = 8;
  // Interval identifier.
  string interval = 9;
  // Whether result was from cache
  bool cached = 10;
}

// Helper message for arrays of doubles
message DoubleArray {
  // Values value.
  repeated double values = 1;
}

// Indicator specification for batch calculation
message IndicatorSpec {
  // Indicator name
  string name = 1;
  // Parameters
  map<string, string> params = 2;
}

// Request to calculate multiple indicators (batch)
message BatchCalculateIndicatorsRequest {
  // Symbol identifier.
  string symbol = 1;
  // Interval identifier.
  string interval = 2;
  // Start date value.
  string start_date = 3;
  // End date value.
  string end_date = 4;
  // List of indicators to calculate
  repeated IndicatorSpec indicators = 5;
  // Optional: User ID for auth/logging
  string user_id = 6;
}

// Response for batch indicator calculation
message BatchCalculateIndicatorsResponse {
  // Individual calculation results
  repeated CalculateIndicatorResponse results = 1;
  // Common timestamps for all indicators
  repeated string timestamps = 2;
}

// ============================================================================
// Health Check Messages
// ============================================================================

// Health check request
message HealthCheckRequest {}

// Health check response
message HealthCheckResponse {
  // "healthy", "degraded", "unhealthy"
  string status = 1;
  // Service name
  string service = 2;
  // Service version
  string version = 3;
  // Server uptime
  int32 uptime_seconds = 4;
  // Number of indicators in cache
  int32 cache_size = 5;
}
